--- a/app/src/main/res/layout/activity_acceso.xml
+++ b/app/src/main/res/layout/activity_acceso.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Acceso">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/hlogo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/h2logo"
-        android:src="@drawable/iconolibro"
+        android:src="@drawable/iconolibro2"
         />
 
     <TextView
@@ -97,7 +97,7 @@
         android:id="@+id/botonentrar"
         android:layout_width="200dp"
         android:layout_height="58dp"
-        android:text="ENTRAR"
+        android:text="ACCEDER"
         app:layout_constraintTop_toBottomOf="@id/h1botones"
         app:layout_constraintBottom_toTopOf="@id/botonregistrar"
         app:layout_constraintStart_toEndOf="@id/v1"
