--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -61,6 +61,7 @@
         app:layout_constraintBottom_toTopOf="@id/hpasswordrepetir"
         app:layout_constraintStart_toEndOf="@+id/v1"
         app:layout_constraintEnd_toStartOf="@id/v2"
+        app:passwordToggleEnabled="true"
         app:startIconDrawable="@drawable/passwordicon"
         app:boxStrokeColor="@color/material_dynamic_primary30"
         >
@@ -69,6 +70,7 @@
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:inputType="textPassword"
             android:hint="CONTRASEÑA" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -79,6 +81,7 @@
         app:layout_constraintTop_toBottomOf="@id/hpasswordrepetir"
         app:layout_constraintStart_toEndOf="@+id/v1"
         app:layout_constraintEnd_toStartOf="@id/v2"
+        app:passwordToggleEnabled="true"
         app:startIconDrawable="@drawable/passwordicon"
         app:boxStrokeColor="@color/material_dynamic_primary30"
         >
@@ -87,13 +90,14 @@
             android:id="@+id/passwordrepetir"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:inputType="textPassword"
             android:hint="REPITA CONTRASEÑA" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         app:layout_constraintTop_toBottomOf="@+id/h2"
         app:layout_constraintStart_toEndOf="@+id/v1"
         app:layout_constraintEnd_toStartOf="@+id/v2"
@@ -135,7 +139,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.7" />
+        app:layout_constraintGuide_percent="0.73" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/v1"
