--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,67 @@
     <color name="grisazulado">#4C5C68</color>
     <color name="gris">#C5C3C6</color>
 
+        <color name="seed">#16425b</color>
+        <color name="md_theme_light_primary">#00658F</color>
+        <color name="md_theme_light_onPrimary">#FFFFFF</color>
+        <color name="md_theme_light_primaryContainer">#C8E6FF</color>
+        <color name="md_theme_light_onPrimaryContainer">#001E2E</color>
+        <color name="md_theme_light_secondary">#006D3A</color>
+        <color name="md_theme_light_onSecondary">#FFFFFF</color>
+        <color name="md_theme_light_secondaryContainer">#99F6B4</color>
+        <color name="md_theme_light_onSecondaryContainer">#00210E</color>
+        <color name="md_theme_light_tertiary">#00687B</color>
+        <color name="md_theme_light_onTertiary">#FFFFFF</color>
+        <color name="md_theme_light_tertiaryContainer">#B0ECFF</color>
+        <color name="md_theme_light_onTertiaryContainer">#001F27</color>
+        <color name="md_theme_light_error">#BA1A1A</color>
+        <color name="md_theme_light_errorContainer">#FFDAD6</color>
+        <color name="md_theme_light_onError">#FFFFFF</color>
+        <color name="md_theme_light_onErrorContainer">#410002</color>
+        <color name="md_theme_light_background">#FAFCFF</color>
+        <color name="md_theme_light_onBackground">#001F2A</color>
+        <color name="md_theme_light_surface">#FAFCFF</color>
+        <color name="md_theme_light_onSurface">#001F2A</color>
+        <color name="md_theme_light_surfaceVariant">#DDE3EA</color>
+        <color name="md_theme_light_onSurfaceVariant">#41484D</color>
+        <color name="md_theme_light_outline">#71787E</color>
+        <color name="md_theme_light_inverseOnSurface">#E1F4FF</color>
+        <color name="md_theme_light_inverseSurface">#003547</color>
+        <color name="md_theme_light_inversePrimary">#87CEFF</color>
+        <color name="md_theme_light_shadow">#000000</color>
+        <color name="md_theme_light_surfaceTint">#00658F</color>
+        <color name="md_theme_light_outlineVariant">#C1C7CE</color>
+        <color name="md_theme_light_scrim">#000000</color>
+        <color name="md_theme_dark_primary">#87CEFF</color>
+        <color name="md_theme_dark_onPrimary">#00344D</color>
+        <color name="md_theme_dark_primaryContainer">#004C6D</color>
+        <color name="md_theme_dark_onPrimaryContainer">#C8E6FF</color>
+        <color name="md_theme_dark_secondary">#7EDA9A</color>
+        <color name="md_theme_dark_onSecondary">#00391C</color>
+        <color name="md_theme_dark_secondaryContainer">#00522A</color>
+        <color name="md_theme_dark_onSecondaryContainer">#99F6B4</color>
+        <color name="md_theme_dark_tertiary">#57D6F6</color>
+        <color name="md_theme_dark_onTertiary">#003641</color>
+        <color name="md_theme_dark_tertiaryContainer">#004E5E</color>
+        <color name="md_theme_dark_onTertiaryContainer">#B0ECFF</color>
+        <color name="md_theme_dark_error">#FFB4AB</color>
+        <color name="md_theme_dark_errorContainer">#93000A</color>
+        <color name="md_theme_dark_onError">#690005</color>
+        <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+        <color name="md_theme_dark_background">#001F2A</color>
+        <color name="md_theme_dark_onBackground">#BFE9FF</color>
+        <color name="md_theme_dark_surface">#001F2A</color>
+        <color name="md_theme_dark_onSurface">#BFE9FF</color>
+        <color name="md_theme_dark_surfaceVariant">#41484D</color>
+        <color name="md_theme_dark_onSurfaceVariant">#C1C7CE</color>
+        <color name="md_theme_dark_outline">#8B9198</color>
+        <color name="md_theme_dark_inverseOnSurface">#001F2A</color>
+        <color name="md_theme_dark_inverseSurface">#BFE9FF</color>
+        <color name="md_theme_dark_inversePrimary">#00658F</color>
+        <color name="md_theme_dark_shadow">#000000</color>
+        <color name="md_theme_dark_surfaceTint">#87CEFF</color>
+        <color name="md_theme_dark_outlineVariant">#41484D</color>
+        <color name="md_theme_dark_scrim">#000000</color>
+
+
 </resources>
