--- a/app/src/main/res/layout/activity_acceso.xml
+++ b/app/src/main/res/layout/activity_acceso.xml
@@ -98,6 +98,7 @@
         android:layout_width="200dp"
         android:layout_height="58dp"
         android:text="ACCEDER"
+        android:backgroundTint="@color/material_dynamic_primary40"
         app:layout_constraintTop_toBottomOf="@id/h1botones"
         app:layout_constraintBottom_toTopOf="@id/botonregistrar"
         app:layout_constraintStart_toEndOf="@id/v1"
